added more elements and text to them

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
     <title>Professional-Portfolio</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Teds Professional Portfolio</h1>
+        <nav>
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>
+            <a href="#resume">Resume</a>
+        </nav>
+    </header>
+    <!-- subheader into header or section? -->
+    <section>
+        <h2>About Me</h2>
+        <p>Insert info about you... etc</p>
+        <h2>Work</h2>
+        <h2>Contact Me</h2>
+        <a href="#phone">333-333-3333</a>
+        <a href="#email">Example@example.com</a>
+        <a href="#instagram">Instagram</a>
+        <a href="#linkedin">LinkedIn</a>
+    </section>
+
 </body>
 </html>
