Added images to h2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <h2>About Me</h2>
         <p>Insert info about you... etc</p>
         <h2>Work</h2>
+        <img alt="Work 1" src="images/50x50-img.png" />
+        <img alt="Work 2" src="images/50x50-img.png" />
+        <img alt="Work 3" src="images/50x50-img.png" />
+        <img alt="Work 4" src="images/50x50-img.png" />
         <h2>Contact Me</h2>
         <a href="#phone">333-333-3333</a>
         <a href="#email">Example@example.com</a>
