Started to edit style.css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Professional-Portfolio</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Teds Professional Portfolio</h1>
         <nav>
             <a href="#about-me">About Me</a>
