--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1>Teds Professional Portfolio</h1>
-        <nav>
+        <nav class="links">
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
@@ -18,19 +18,25 @@
         </nav>
     </header>
     <!-- subheader into header or section? -->
-    <section>
-        <h2>About Me</h2>
-        <p>Insert info about you... etc</p>
-        <h2>Work</h2>
-        <img alt="Work 1" src="images/50x50-img.png" />
-        <img alt="Work 2" src="images/50x50-img.png" />
-        <img alt="Work 3" src="images/50x50-img.png" />
-        <img alt="Work 4" src="images/50x50-img.png" />
-        <h2>Contact Me</h2>
-        <a href="#phone">333-333-3333</a>
-        <a href="#email">Example@example.com</a>
-        <a href="#instagram">Instagram</a>
-        <a href="#linkedin">LinkedIn</a>
+    <section class="content">
+        <section class="key-tag">
+             <h2>About Me</h2>
+            <p>Insert info about you... etc</p>
+        </section>
+        <section class="key-tag">
+            <h2>Work</h2>
+            <img alt="Work 1" src="images/50x50-img.png" />
+            <img alt="Work 2" src="images/50x50-img.png" />
+            <img alt="Work 3" src="images/50x50-img.png" />
+            <img alt="Work 4" src="images/50x50-img.png" />
+        </section>
+        <section class="key-tag">
+            <h2>Contact Me</h2>
+            <a href="#phone">333-333-3333</a>
+            <a href="#email">Example@example.com</a>
+            <a href="#instagram">Instagram</a>
+            <a href="#linkedin">LinkedIn</a>
+        </section>
     </section>
 
 </body>
