--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             <a href="#resume">Resume</a>
         </nav>
     </header>
-    <!-- subheader into header or section? -->
+
     <section class="content">
+        <section class="profile">
+            <img alt="Ted's Profile Pic" src="assets/images/profile pic.jpg">
+        </section>
         <section class="key-tag">
              <h2>About Me</h2>
-            <p>Insert info about you... etc</p>
+            <p>Hello! My name is Ted Shishkovskiy and I am new to the world of coding and web-development. I decided to make this career change in order to reach my other life goals. Some of these goals include traveling, working from home and having exciting work I can do from the easy access of a Laptop/Computer. This journey excites me because it is a field that forces continueous learning and can be used to do so much more than just "Website Devolopment". I plan on sticking to this as a long-term career and this is just one small step to a much more engaging and challenging future.</p>
         </section>
         <section class="key-tag">
             <h2>Work</h2>
-            <img alt="Work 1" src="images/50x50-img.png" />
-            <img alt="Work 2" src="images/50x50-img.png" />
-            <img alt="Work 3" src="images/50x50-img.png" />
-            <img alt="Work 4" src="images/50x50-img.png" />
+            <img alt="horiseon-project" src="images/50x50-img.png" />
         </section>
-        <section class="key-tag">
+        <section class="key-link">
             <h2>Contact Me</h2>
             <a href="#phone">333-333-3333</a>
             <a href="#email">Example@example.com</a>
