--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
             <a href="#resume">Resume</a>
+           <figure>
+            <img class="profile" alt="Ted's Profile Pic" src="assets/images/profile pic.jpg">
+        </figure>   
         </nav>
     </header>
 
     <section class="content">
-        <section class="key-tag">
-             <h2>About Me</h2>
-            <img class="profile" alt="Ted's Profile Pic" src="assets/images/profile pic.jpg">
+        <section id="about-me" class="key-tag">
+        <h2>About Me</h2>
+        
             <p>Hello! My name is Ted Shishkovskiy and I am new to the world of coding and web-development. I decided to make this career change in order to reach my other life goals. Some of these goals include traveling, working from home and having exciting work I can do from the easy access of a Laptop/Computer. This journey excites me because it is a field that forces continueous learning and can be used to do so much more than just "Website Devolopment". I plan on sticking to this as a long-term career and this is just one small step to a much more engaging and challenging future.</p>
         </section>
         <section class="key-tag">
+        <figure id="work" class="workflow">
+            <img alt="horiseon-project" src="./assets/images/Horiseon1.png" />
+        </figure>    
             <h2>Work</h2>
-            <img alt="horiseon-project" src="./assets/images/Horiseon.png" />
         </section>
-        <section class="key-link">
+        <section id="contact-me" class="key-link">
             <h2>Contact Me</h2>
             <a href="#phone">333-333-3333</a>
             <a href="#email">Example@example.com</a>
