--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <header class="header">
-        <h1>Teds Professional Portfolio</h1>
+        <h1>Ted Shishkovskiy's Professional Portfolio</h1>
         <nav class="links">
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
-            <a href="#resume">Resume</a>
+            <a href="https://docs.google.com/document/d/1NChsDFUXvShk5_pNAmRwmosP-mEgZlehibGjJCFEtmQ/edit?usp=sharing">Resume</a>
            <figure>
             <img class="profile" alt="Ted's Profile Pic" src="assets/images/profile pic.jpg">
         </figure>   
@@ -30,6 +30,7 @@
         <section class="key-tag">
         <figure id="work" class="workflow">
             <img alt="horiseon-project" src="./assets/images/Horiseon1.png" />
+            <a href="https://theodoreshishkovskiy.github.io/horiseon-refactor-project/" >horiseon-refactor-project</a>
         </figure>    
             <h2>Work</h2>
         </section>
@@ -37,8 +38,8 @@
             <h2>Contact Me</h2>
             <a href="#phone">333-333-3333</a>
             <a href="#email">Example@example.com</a>
-            <a href="#instagram">Instagram</a>
-            <a href="#linkedin">LinkedIn</a>
+            <a href="https://www.instagram.com/ted_m_s/">Instagram</a>
+            <a href="https://www.linkedin.com/in/theodore-shishkovskiy-870939137/">LinkedIn</a>
         </section>
     </section>
 
