added target elements to external links and removed unused media css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
-            <a href="https://docs.google.com/document/d/1NChsDFUXvShk5_pNAmRwmosP-mEgZlehibGjJCFEtmQ/edit?usp=sharing">Resume</a>
+            <a href="https://docs.google.com/document/d/1NChsDFUXvShk5_pNAmRwmosP-mEgZlehibGjJCFEtmQ/edit?usp=sharing" target="_blank">Resume</a>
            <figure>
             <img class="profile" alt="Ted's Profile Pic" src="assets/images/profile pic.jpg">
         </figure>   
@@ -39,7 +39,7 @@
             <a href="#phone">333-333-3333</a>
             <a href="#email">Example@example.com</a>
             <a href="https://www.instagram.com/ted_m_s/">Instagram</a>
-            <a href="https://www.linkedin.com/in/theodore-shishkovskiy-870939137/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/theodore-shishkovskiy-870939137/" target="_blank">LinkedIn</a>
         </section>
     </section>
 
