added project 2 to assignment

--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
             <h2>Work</h2>
            
         <div>   
+            <a href="https://cannaestia.herokuapp.com/" class="work1" target="_blank">
+                <img alt="project-2" src="./assets/images/project 2.png" />
+                </a>
+        </div>
+        <div>   
             <a href="https://theodoreshishkovskiy.github.io/horiseon-refactor-project/" class="work1" target="_blank">
                 <img alt="horiseon-project" src="./assets/images/Horiseon1.png" />
                 </a>
         </div>
         <div>
-            <img alt="horiseon-project" src="./assets/images/01-product-page.png" />
+            <img alt="product-page" src="./assets/images/01-product-page.png" />
         </div>
         <div>
-            <img alt="horiseon-project" src="./assets/images/01-wireframe-form-completed.png" />
+            <img alt="wireframe-form" src="./assets/images/01-wireframe-form-completed.png" />
         </div>
        
         </section>
