fixed image size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            
         <div>   
             <a href="https://cannaestia.herokuapp.com/" class="work1" target="_blank">
-                <img alt="project-2" src="./assets/images/project 2.png" />
+                <img alt="project-2" src="./assets/images/project22.png" />
                 </a>
         </div>
         <div>   
